<resources>
    <string name="app_name">FitnessTracker</string>

    <string name="title_activity_splashscreen">splashscreen</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_in_button">Log In</string>
    <string name="username">Username : </string>
    <string name="password">Password : </string>
    <string name="confrimPassword">Confirm Password : </string>
    <string name="emptyString"> </string>
    <string name="createAccount">Create Account</string>
    <string name="logIn">Log In</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title">Fitness Tracker</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="height">Height :</string>
    <string name="weight">Weight :</string>
    <string name="inches"> inches</string>
    <string name="feet"> feet </string>
    <string name="goalWeight">Goal Weight :</string>
    <string name="activity">Activity :</string>
    <string name="calculate">Calculate</string>
    <string name="none">Sedentary, little or no exercise</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="selectPlan">Select a plan :</string>
    <string name="hardCutPlan">Hard Cut :</string>
    <string name="cutPlan">Light Cut :</string>
    <string name="maintenancePlan">Maintenance :</string>
    <string name="cleanBulkPlan">Clean Bulk :</string>
    <string name="hardBulkPlan">Hard Bulk :</string>
    <string name="pounds">lbs</string>
    <string name="calorieTracker">Calories/Macros</string>
    <string name="Profile">Profile</string>
    <string name="trackWeight">Weight</string>
</resources>
