<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="com.erictossell.fitnesstracker.createProfile">


    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_gravity="center"
            android:text="@string/name" />
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_gravity="center"
            android:text="@string/age" />
        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:ems="10"
            android:inputType="number"
            android:text="" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_gravity="center"
            android:text="@string/gender" />
        <RadioGroup>
        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
        </RadioGroup>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="1"
        android:layout_gravity="center"
        android:text="@string/height" />
        <LinearLayout>
        <EditText
            android:id="@+id/feetEditText"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="" />
        <TextView
            android:id="@+id/feetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feet" />

            <EditText
                android:id="@+id/inchesEditText"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="" />
        <TextView
            android:id="@+id/inchesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inches" />
        </LinearLayout>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_gravity="center"
            android:text="@string/weight" />
        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:ems="10"
            android:inputType="number"
            android:text="" />
        <TextView
            android:id="@+id/poundsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pounds" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/activityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_gravity="center"
            android:text="@string/activity" />

        <SeekBar
            android:id="@+id/activitySeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activityLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="4"
            android:text="@string/none" />

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/calculateCaloriesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:layout_gravity="center"
            android:text="@string/calculate"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/caloriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text=""             />
    </TableRow>
</TableLayout>
