<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    tools:context="com.erictossell.fitnesstracker.macroPlans">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black_overlay"
            android:layout_span="3"
            android:text="@string/selectPlan"/>
    </TableRow>
    <TableRow
        android:id="@+id/hardCut"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tablerow"
        android:padding="25dp"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/hardCutPlan"
            />
        <TextView
            android:id="@+id/hardCutCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text=""
            />
        <TextView
            android:id="@+id/hardCutMacros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="P/C/F"
            />
    </TableRow>
    <TableRow
        android:id="@+id/cut"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="@drawable/tablerow"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/cutPlan"
            />
        <TextView
            android:id="@+id/cutCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text=""
            />
        <TextView
            android:id="@+id/cutMacros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="P/C/F"
            />
    </TableRow>
    <TableRow
        android:id="@+id/maintenance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="@drawable/tablerow"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/maintenancePlan"
            />
        <TextView
            android:id="@+id/maintenanceCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text=""
            />
        <TextView
            android:id="@+id/maintenanceMacros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="P/C/F"
            />

    </TableRow>
    <TableRow
        android:id="@+id/cleanBulk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="@drawable/tablerow"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/cleanBulkPlan"
            />
        <TextView
            android:id="@+id/cleanBulkCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text=""
            />
        <TextView
            android:id="@+id/cleanBulkMacros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="P/C/F"
            />

    </TableRow>
    <TableRow
        android:id="@+id/hardBulk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="@drawable/tablerow"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/hardBulkPlan"
            />
        <TextView
            android:id="@+id/hardBulkCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text=""
            />
        <TextView
            android:id="@+id/hardBulkMacros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="P/C/F"
            />
    </TableRow>
</TableLayout>
